button overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ h2 {
 }
 .pagin {
   background-color: teal;
+  min-width: 70px;
 }
 
 input[type="text"],
